--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,18 @@
 body{
-    color: green;
-    text-align: center;
+    color: rgb(218, 78, 213);
+    text-align: left;
     font-family: "Arial";
+    font-size: 16px;
+    margin: 3;
+    padding: 5;
+}
+#container{
+    width: 50%;
+    padding: 2em;
+    text-align: center;
+    border: 5px solid #DDD;
+    margin: 1 auto;
+}
+#container h1{
+    font-size: 30px;
 }
