Se agrego un oarrafo y cambio de letra

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
     color: rgb(218, 78, 213);
     text-align: left;
-    font-family: "Arial";
+    font-family: 'Courier New', Courier, monospace;
     font-size: 16px;
     margin: 3;
     padding: 5;
