--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
-    color: rgb(0, 0, 0);
-    text-align: left;
-    font-family: 'Courier New', Courier, monospace;
+    color: red;
+    text-align: center;
+    font-family: "Arial";
     font-size: 16px;
     margin: 0;
     padding: 0
