--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,15 @@
 body{
+    background: 0, 0, 0, 0.5;
     color: #333;
     text-align: center;
     font-family: "Arial";
     font-size: 16px;
     margin: 0;
     padding: 0
+}
+#Cabecera #logo {
+    width: 20px;
+    vertical-align: middle;
 }
 #Cabecera{
     background: #33A;
@@ -28,4 +33,8 @@ body{
 }
 #container h1{
     font-size: 20px;
+}
+#post{
+    background: white;
+    padding: 1em;
 }
